<resources>
    <string name="app_name">AlquilAPP</string>
    <string name="action_settings">Settings</string>

    <!-- PREFERENCIAS-->
    <string name="pref_ratio">prefRatio</string>
    <string name="pref_edad">prefFecha</string>

    <!-- TabLayout -->
    <string name="tab_solicitudes">Suscripciones</string>
    <string name="tab_anuncios">Anuncios</string>
    <string name="tab_mis_anuncios">Mis Anuncios</string>

    <!-- NAV DRAWER -->
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="title_nav_home">Inicio</string>
    <string name="title_nav_new_adv">Crear anuncio</string>
    <string name="title_nav_edit_profile">Editar perfil</string>
    <string name="title_nav_messages">Mensajes</string>
    <string name="title_nav_preferences">Preferencias</string>
    <string name="title_nav_sign_of">Cerrar Sesión</string>
    <string name="title_nav_about_us">Acerca de</string>

    <!-- PRESTACIONES -->
    <string name="aptoMascotas">Apto para mascotas</string>
    <string name="aireAcondicionado">Aire acondicionado</string>
    <string name="ascensor">Ascensor</string>
    <string name="calefaccion">Calefacción</string>
    <string name="lavadora">Lavadora</string>
    <string name="parking">Parking</string>
    <string name="prohibidoFumar">Prohibido Fumar</string>
    <string name="secadora">Secadora</string>
    <string name="trenCercano">Tren/Metro cercano</string>
    <string name="television">Televisión</string>
    <string name="internet">Internet</string>

    <!-- TOOLBAR TITLES-->
    <string name="toolbarTitle_mensajes">Mensajes</string>

    <!-- MAPS =  getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>


    <!-- CrearAnuncio1Activity-->
    <string name="alertSinImagen_CrearAnuncioActivity1">Debes cargar al menos una imagen principal para el anuncio</string>
    <string name="frase_CrearActivity1">Capta la atención de tus clientes con las mejores fotos.</string>
    <string name="siguiente_CrearAnuncio1">Siguiente</string>
        <!-- Diálogo de selección -> Cámara, Galería, Eliminar-->
        <string name="title_DialogSelectImage">Seleccione una de las opciones</string>
        <string name="alert_noCamera">Este dispositivo no dispone de cámara</string>

    <!-- CrearAnuncio2Activity-->
    <string name="tipoVivienda_casa">Casa</string>
    <string name="tipoVivienda_habitacion">Habitación</string>
    <string name="tipoVivienda_piso">Piso</string>

    <string name="hint_txtTituloAnuncio">Título del anuncio</string>
    <string name="hint_txtDireccion">Dirección</string>
    <string name="hint_txtNum">Número</string>
    <string name="hint_txtPoblacion">Población</string>
    <string name="hint_txtProvincia">Provincia</string>
    <string name="hint_txtHabitaciones">Habitaciones</string>
    <string name="hint_txtCamas">Camas</string>
    <string name="hint_txtToilets">Cuartos de baño</string>
    <string name="hint_txtTamano">Tamaño</string>
    <string name="hint_txtDescripcion">Descripción</string>
    <string name="hint_txtPrecio">Precio</string>

    <string name="error_campoVacio">Rellene este campo</string>
    <string name="toast_seleccionaVivienda">Seleccione el tipo de vivienda</string>
    <string name="text_emptyViewPrestaciones_crearAnuncio2">Sin prestaciones</string>


    <!-- DetallesAnuncioActivity -->
    <string name="text_lblTituloTamano">Tamaño</string>
    <string name="text_lblTituloPrecio">Precio</string>
    <string name="text_lblToilets">Baños</string>
    <string name="text_emptyViewPrestaciones_ActivityDetallesAnuncio">Sin prestaciones</string>
        <!-- Dialog Enviar Mensaje-->
        <string name="title_dialogEnviarMensaje">Enviar mensaje</string>
        <string name="hint_txtEscribirMensaje">Escribir mensaje</string>
        <!-- Dialog Advert Removed-->
        <string name="title_AdvertRemovedDialog">Ups! El anuncio ha sido eliminado</string>


    <!-- EditProfileActivity -->
    <string name="hint_txtNombre">Nombre</string>
    <string name="hint_txtApellidos">Apellidos</string>
    <string name="hint_txtFechaNac">Fecha de nacimiento</string>
    <string name="hint_txtNacionalidad">Nacionalidad</string>
    <string name="hint_txtProfesion">Profesión</string>
    <string name="hint_descripcion_editProfile">Descripción</string>
    <string name="text_btnConfirmar">Confirmar</string>
        <!-- DatePicker -->
        <string name="title_datePicker">Seleccione su fecha</string>

    <!-- InicioActivity -->
    <string name="hint_txtEmail">Email</string>
    <string name="hint_txtPass">Contraseña</string>
    <string name="text_rememberMe">Seguir conectado</string>
    <string name="text_btnIniciar">Iniciar sesión</string>
    <string name="text_btnRegistrarse">¿Nuevo Aquí? Registrate</string>

    <!-- LocalizacionActivity-->
    <string name="hint_txtDireccion_localizador">Buscar</string>
    <string name="toast_noValidLocation">Esta localización no es válida</string>

    <!-- MainActivity -->
    <string name="error_locationNotFound">No es posible encontrar su posición</string>
    <string name="toast_needLocationToSeeNearAdverts">Necesita activar Ubicación para poder ver los anuncios cercanos a usted</string>

    <!-- RegistroActivity-->
    <string name="hint_txtRepeatPass">Repetir Contraseña</string>
    <string name="hint_lblCancelar">CANCELAR</string>
    <string name="hint_btnRegistrarse">Registrarse</string>
    <string name="error_notEqualPasswords">Las contraseñas no son iguales</string>
    <string name="error_alreadyUserCreated">Este usuario ya existe</string>

    <!-- VerPerfilActivity -->
    <string name="text_lblDescripcionNoDisponible">Descripción no disponible</string>


    <!-- AboutUsDialogFragment -->
    <string name="title_AboutUsDialog">About Us</string>

    <!-- CaracteristicasUsuarioDialogFragment -->
    <string name="title_CaracteristicasUsuarioDialogFragment">Características</string>
    <string name="text_lblOrdenado">Ordenado</string>
    <string name="text_lblFiestero">Fiestero</string>
    <string name="text_lblSociable">Sociable</string>
    <string name="text_lblActivo">Activo</string>
    <string name="default_num_caracteristica">0</string>

    <!-- DescripbionDialogFragment-->
    <string name="title_DescripcionDialogFragment">Descripción</string>

    <!-- FilterDialogFragment -->
    <string name="title_FilterDialogFragment">Filtrar Anuncios</string>
    <string name="text_btnFiltrar">Filtrar</string>
    <string name="text_emptyViewPrestaciones">Seleccione las prestaciones que desee</string>

    <!-- NacionalidadesDialogFragment -->
    <string name="title_NacionalidadesDialogFragment">Nacionalidades</string>

    <!-- SeleccionPrestacionesDialogFragment-->
    <string name="title_SeleccionPrestacionesDialogFragment">Prestaciones</string>

    <!-- AdvertsRecyclerViewAdapterFragment -->
    <string name="text_emptyView_tab_suscritos">No estás suscrito a ningún anuncio</string>
    <string name="text_emptyView_tab_anuncios">No se han encontrado anuncios cerca de tí</string>
    <string name="text_emptyView_tab_misAnuncios">Aún no has publicado ningún anuncio</string>
    <string name="text_emptyView_anuncios_ubicacion_desactivada">Sin ubicación activada</string>

    <!-- PrincipalFragment -->
    <string name="emptyView_busqueda_sin_exito">Sin resultados</string>
    <string name="emptyView_location_disabled">Ubicación desactivada</string>

    <string name="text_no_connection">Sin conexión a internet</string>

    <!-- MessageFragment-->
    <string name="text_emptyViewMensajes">Cargando mensajes</string>



</resources>
