<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/title_nav_home" />
        <item
            android:id="@+id/nav_new_adv"
            android:icon="@drawable/ic_nav_add_adv"
            android:title="@string/title_nav_new_adv" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_nav_edit_profile"
            android:title="@string/title_nav_edit_profile" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_nav_messages"
            android:title="@string/title_nav_messages" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_nav_preferences"
            android:title="@string/title_nav_preferences" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_sign_off"
            android:icon="@drawable/ic_nav_sign_off"
            android:title="@string/title_nav_sign_of"/>
    </group>
</menu>
