<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="c.proyecto.activities.CrearAnuncio2Activity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/groupLocalizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/txtTituloAnuncio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="30"
                android:hint="@string/hint_txtTituloAnuncio" />

            <!-- CASA -->
            <ImageView
                android:id="@+id/imgCasa"
                android:layout_width="@dimen/bounds_imgTipoVivienda"
                android:layout_height="@dimen/bounds_imgTipoVivienda"
                android:layout_below="@id/txtTituloAnuncio"
                android:layout_marginLeft="@dimen/marginLeft_imgCasa"
                android:layout_marginStart="@dimen/marginLeft_imgCasa"
                android:layout_marginTop="@dimen/marginTop_imgCasa"
                android:src="@drawable/tipo_casa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgCasa"
                android:layout_marginLeft="@dimen/marginLeft_lblCasa"
                android:layout_marginStart="@dimen/marginLeft_lblCasa"
                android:layout_marginTop="@dimen/marginTop_lblCasa"
                android:text="@string/tipoVivienda_casa"
                android:textStyle="bold" />

            <!-- HABITACIÓN -->
            <ImageView
                android:id="@+id/imgHabitacion"
                android:layout_width="@dimen/bounds_imgTipoVivienda"
                android:layout_height="@dimen/bounds_imgTipoVivienda"
                android:layout_below="@id/txtTituloAnuncio"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/marginLeft_imgHabitacion"
                android:layout_marginStart="@dimen/marginLeft_imgHabitacion"
                android:layout_marginTop="@dimen/marginTop_imgHabitacion"
                android:src="@drawable/tipo_habitacion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgHabitacion"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/marginLeft_lblHabitacion"
                android:layout_marginStart="@dimen/marginLeft_lblHabitacion"
                android:layout_marginTop="@dimen/marginTop_lblHabitacion"
                android:text="@string/tipoVivienda_habitacion"
                android:textStyle="bold" />

            <!-- PISO -->
            <ImageView
                android:id="@+id/imgPiso"
                android:layout_width="@dimen/bounds_imgTipoVivienda"
                android:layout_height="@dimen/bounds_imgTipoVivienda"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/txtTituloAnuncio"
                android:layout_marginRight="@dimen/marginRight_imgPiso"
                android:layout_marginEnd="@dimen/marginRight_imgPiso"
                android:layout_marginTop="@dimen/marginTop_imgPiso"
                android:src="@drawable/tipo_piso" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/imgPiso"
                android:layout_marginRight="@dimen/marginRight_lblPiso"
                android:layout_marginEnd="@dimen/marginRight_lblPiso"
                android:layout_marginTop="@dimen/marginTop_lblPiso"
                android:text="@string/tipoVivienda_piso"
                android:textStyle="bold" />

            <!-- LOCALIZACIÓN -->


            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="@dimen/width_txtDireccion"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgCasa"
                android:layout_marginTop="@dimen/marginTop_txtDireccion"
                android:inputType="none"
                android:focusable="false"
                android:hint="@string/hint_txtDireccion"
                android:dropDownWidth="match_parent"
                />

            <EditText
                android:id="@+id/txtNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/txtDireccion"
                android:layout_marginLeft="@dimen/marginLeft_txtNum"
                android:layout_marginStart="@dimen/marginLeft_txtNum"
                android:layout_toEndOf="@id/txtDireccion"
                android:layout_toRightOf="@id/txtDireccion"
                android:maxLines="1"
                android:hint="@string/hint_txtNum" />

            <EditText
                android:id="@+id/txtPoblacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDireccion"
                android:inputType="none"
                android:focusable="false"
                android:hint="@string/hint_txtPoblacion" />

            <EditText
                android:id="@+id/txtProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPoblacion"
                android:inputType="none"
                android:focusable="false"
                android:maxLines="1"
                android:hint="@string/hint_txtProvincia" />
        </RelativeLayout>


        <!-- PRESTACIONES -->

        <RelativeLayout
            android:id="@+id/groupPrestaciones"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@id/groupLocalizacion"
            android:layout_marginTop="8dp"
            android:background="@color/colorShape">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvPrestaciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"/>
            <TextView
                android:id="@+id/emptyViewPrestaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_emptyViewPrestaciones_crearAnuncio2"
                android:visibility="gone"/>
        </RelativeLayout>

        <!-- DESCRIPCIÓN -->
        <RelativeLayout
            android:id="@+id/groupDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/groupPrestaciones"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/txtCamas"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:hint="@string/hint_txtCamas" />

            <EditText
                android:id="@+id/txtToilets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txtCamas"
                android:layout_toEndOf="@id/txtCamas"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:hint="@string/hint_txtToilets" />

            <EditText
                android:id="@+id/txtTamano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtCamas"
                android:inputType="number"
                android:maxLines="1"
                android:hint="@string/hint_txtTamano"/>

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTamano"
                android:hint="@string/hint_txtDescripcion"/>

            <EditText
                android:id="@+id/txtPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDescripcion"
                android:maxLines="1"
                android:hint="@string/hint_txtPrecio"
                android:inputType="numberDecimal"/>

        </RelativeLayout>

    </RelativeLayout>


</ScrollView>
